--- a/package.json
+++ b/package.json
@@ -1,7 +1,26 @@
-// ... existing code ...
+{
+  "name": "my-nfc-webapp",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack --hostname 0.0.0.0",
     "build": "next build --turbopack",
     "start": "next start",
-// ... existing code ...
+    "lint": "eslint"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.16.1",
+    "bcrypt": "^6.0.0",
+    "next": "^15.5.3",
+    "prisma": "^6.16.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.3",
+    "tailwindcss": "^4"
+  }
+}
