--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.16.1",
     "bcrypt": "^6.0.0",
     "next": "^15.5.3",
+    "nodemailer": "^7.0.6",
     "prisma": "^6.16.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
