--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,9 @@ NEXTAUTH_URL="http://localhost:3000"
 
 # For production, update NEXTAUTH_URL to your live domain:
 # NEXTAUTH_URL="https://your-app-name.vercel.app"
+
+# Public Admin Password (change this in production!)
+NEXT_PUBLIC_ADMIN_PASSWORD=secret123
+
+# E-commerce Integration API Key
+ECOMMERCE_API_KEY=your-secure-ecommerce-api-key-here
