--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "@prisma/client": "^6.16.1",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^2.4.3",
     "next": "^15.5.3",
     "nodemailer": "^7.0.6",
     "prisma": "^6.16.1",
